[package]
name = "tidy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
